# astrolink

./: .gitignore  .gitlab-ci.yml  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  meta.yaml  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml  pypi.yml
astrolink/: __init__.py  astrolink.py  astrolink_.py  io.py  plot.py  plotting.py  visualize.py
doc/: api.rst  conf.py  howitworks.md  index.rst
notebooks/: demo.ipynb
paper/: paper.bib  paper.md
tests/: test_astrolink.py  test_io.py  test_plotting.py  test_visualize.py
